@@ -17,6 +17,7 @@ Format:
 + Support for explicit string lengths added.
 + Improved support for BinaryData in queries.
 + New convenience methods added to BinaryData class.
++ Group::write() and Group::write_to_mem() are now 'const'.
 
 
 2013-03-11 (Kristian Spangsege)
